Add Java 9 support